--- a/TwitchVideosUtil.csproj
+++ b/TwitchVideosUtil.csproj
@@ -54,4 +54,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>del $(ProjectDir)dist.zip
+set zip="C:\Program Files\7-Zip\7z.exe"
+%25zip%25 a -mx9 -tzip $(ProjectDir)dist.zip $(TargetDir)\*.exe $(TargetDir)\*.dll $(TargetDir)\*.config</PostBuildEvent>
+  </PropertyGroup>
 </Project>
